# service/src/main/resources/api.yml
@@ -32,6 +32,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseError'
+    delete:
+      summary: 'Deactivate a room by id'
+      operationId: deleteRoom
+      tags:
+        - room
+      parameters:
+        - name: id
+          required: true
+          in: path
+          description: ID of the room
+          schema:
+            type: integer
+            format: int64
+      responses:
+        204:
+          description: 'Deactivated Successfully.'
+        404:
+          description: Not Found
   /rooms:
     post:
       summary: 'Creates a room'
